# nao-dashboard

./: app.py  pyproject.toml
static/css/: style.css
static/js/: barchart.js  index.js  piechart.js  updateBarchart.js
templates/: index.html
