[tool.poetry]
name = "nao-dashboard"
version = "0.1.0"
description = ""
authors = ["formation2022 <103824522+formation2022@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
